# brickstats

./: .gitignore  Cargo.toml  LICENSE  README.md  rebrickable.swagger
src/: gnuplot_wrapper.rs  main.rs  plot.rs  png_plot.rs  rebrickable.rs  stats.rs
src/input/: mod.rs  rebrickable.rs
src/output/: mod.rs  plot.rs  wordcloud.rs
