[package]
name = "brickstats-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# diesel = { version = "2.0", features = ["sqlite"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking"] }
colored = "2.0"
gnuplot = "0.0.37"
lazy_static = "1.4"