[package]
name = "brickstats-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking"] }
colored = "2.0"
lazy_static = "1.4"
anyhow = "1.0"
clap = { version = "4.1", features = ["cargo"] }
csv = "1.1"
